fixed signup alignment on mobile devices

--- a/app/assets/stylesheets/media-queries.less
+++ b/app/assets/stylesheets/media-queries.less
@@ -60,6 +60,7 @@
   }
 
   .signup {
+    text-align: center;
     .btn-twitter {
       margin-bottom: 0px;
     }
